Fixed issue #14 - centered content and gap

--- a/src/sass/Category_of_products/category-furniture.scss
+++ b/src/sass/Category_of_products/category-furniture.scss
@@ -58,11 +58,12 @@
     display: flex;
     flex-direction: column;
     border: 0;
-    padding: 0;
+    padding: 0 0 5px 0;
     background: none;
     cursor: pointer;
     outline: none;
     transition: 800ms;
+    align-items: center;
 
     &:hover,
     &:focus,
