--- a/src/sass/Header/info-wrapper.scss
+++ b/src/sass/Header/info-wrapper.scss
@@ -7,6 +7,7 @@
   font-weight: 700;
   text-decoration: none;
   position: relative;
+  padding: 4px 0 0 0;
   &::after {
     content: "";
     display: block;
