--- a/src/sass/Products/index.scss
+++ b/src/sass/Products/index.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   padding: 0;
-  margin: 87px 0 50px;
+  margin: 82px 0 50px;
   list-style: none;
   grid-gap: 46px 30px;
   @media (max-width: 375px) {
